--- a/src/scss/terms-style.scss
+++ b/src/scss/terms-style.scss
@@ -12,3 +12,5 @@
 @import 'layout/header';
 @import 'layout/normalize';
 @import 'layout/terms-conditions';
+@import 'layout/forms';
+@import 'layout/lightbox';
