<p> fixed, footer fixed, lightbox done

--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -9,7 +9,7 @@ fieldset {
 }
 
 label {
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Montserrat', sans-serif; 
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.25rem;
