--- a/src/scss/layout/_terms-conditions.scss
+++ b/src/scss/layout/_terms-conditions.scss
@@ -17,6 +17,5 @@
 .ol {
     border-left: 3px #E6E6E6 solid;
     padding-left: 20px;
-    font-family: open sans, sans-serif;
-    
+    font-family: 'Montserrat', sans-serif;
 }
