--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -15,7 +15,7 @@ a{
 
 /*typography*/
 p{
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Montserrat', sans-serif; 
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.25rem;
