--- a/src/scss/layout/_terms-conditions.scss
+++ b/src/scss/layout/_terms-conditions.scss
@@ -19,3 +19,28 @@
     padding-left: 20px;
     font-family: 'Montserrat', sans-serif;
 }
+
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 15px solid white;
+    border-radius: 5px;
+    position: relative;
+    top: -10px;
+    
+}
+
+.arrow-container {
+    width: 50px;
+    height: 50px;
+    background-color: $primaryColorBgBlue;
+    text-align: center;
+    border-radius: 100%;
+    position: absolute;
+    border: 5px solid white;
+    box-shadow: $shadow;
+    right: 30px;
+    margin-top: -25px;
+}
