--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -73,6 +73,9 @@ h1{
     line-height: 3.75rem; 
     }
 }
+.t-h1--withoutshadow{
+    text-shadow: 0px 0px 0px;
+}
 
 h2{
     font-size: 2rem;
@@ -163,4 +166,12 @@ h6{
 }
 .txt-shadow{
      text-shadow: 0px 1px 5px $secondaryColorBgBlack2;
+}
+
+.txt-uppercase{
+    text-transform: uppercase;
+}
+
+.txt-center{
+    text-align: center;
 }
