--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,8 @@
 @import 'layout/footer';
 @import 'layout/typography';
 @import 'layout/header';
+@import 'layout/menu';
+@import 'layout/profile';
 
 
 
