--- a/src/scss/terms-style.css
+++ b/src/scss/terms-style.css
@@ -2954,6 +2954,108 @@ input:hover:-moz-placeholder {
 input:hover:-ms-input-placeholder {
   color: #11bbcc; }
 
+/*Checkbox estilado*/
+/* line 56, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] {
+  height: 0;
+  width: 0; }
+
+/* line 58, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label {
+  position: relative;
+  display: flex;
+  margin: .6em 0;
+  align-items: center;
+  color: #9e9e9e;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.23, 1); }
+
+/* line 66, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label > ins {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 2em;
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+  text-decoration: none;
+  transition: height 300ms cubic-bezier(0.4, 0, 0.23, 1); }
+
+/* line 77, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label > ins > i {
+  position: absolute;
+  bottom: 0;
+  font-style: normal;
+  color: #11bbcc; }
+
+/* line 83, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label > span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1em;
+  width: 1em;
+  height: 1em;
+  background: transparent;
+  border: 2px solid #9E9E9E;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.23, 1); }
+
+/* line 97, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label:hover, input[type='checkbox']:focus + label {
+  color: #11bbcc; }
+
+/* line 100, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span {
+  background: rgba(255, 255, 255, 0.1);
+  border: 2px solid #11bbcc; }
+
+/* line 104, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox']:checked + label > ins {
+  height: 100%; }
+
+/* line 106, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox']:checked + label > span {
+  border: 0.5em solid #11bbcc;
+  animation: shrink-bounce 200ms cubic-bezier(0.4, 0, 0.23, 1); }
+
+/* line 110, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_forms.scss */
+input[type='checkbox']:checked + label > span:before {
+  content: "";
+  position: absolute;
+  top: .6em;
+  left: .2em;
+  border-right: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  transform: rotate(45deg);
+  transform-origin: 0% 100%;
+  animation: checkbox-check 125ms 250ms cubic-bezier(0.4, 0, 0.23, 1) forwards; }
+
+@keyframes shrink-bounce {
+  0% {
+    transform: scale(1); }
+  33% {
+    transform: scale(0.85); }
+  100% {
+    transform: scale(1); } }
+
+@keyframes checkbox-check {
+  0% {
+    width: 0;
+    height: 0;
+    border-color: #fff;
+    transform: translate3d(0, 0, 0) rotate(45deg); }
+  33% {
+    width: .2em;
+    height: 0;
+    transform: translate3d(0, 0, 0) rotate(45deg); }
+  100% {
+    width: .2em;
+    height: .5em;
+    border-color: #212121;
+    transform: translate3d(0, -0.5em, 0) rotate(45deg); } }
+
 /* line 1, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
 .lightbox {
   padding: 20px;
@@ -2967,20 +3069,22 @@ input:hover:-ms-input-placeholder {
   position: absolute;
   left: 0;
   right: 0;
+  top: 20%;
   margin: auto; }
 
-/* line 16, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+/* line 17, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
 .lightbox-header {
   float: left;
   margin-top: -60px; }
 
-/* line 21, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+/* line 22, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
 .h1-lightbox {
   color: #ed497e;
   font-size: 1.85rem;
-  line-height: 2rem; }
+  line-height: 2rem;
+  width: 100%; }
 
-/* line 27, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+/* line 29, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
 .close-position {
   position: relative;
   left: 97%;
@@ -2991,36 +3095,49 @@ input:hover:-ms-input-placeholder {
   background-position: center;
   background-size: 55% 55%; }
 
+/* line 41, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+.advice-text {
+  float: left;
+  margin-bottom: 25px; }
+
 /*Opciones*/
 /* line 2, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .accordion {
   width: 90%;
+  max-width: 450px;
   text-align: center;
   margin: auto;
   margin-top: -40px;
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  border-top: 1px solid #0097e8;
+  border-bottom: 1px solid #0097e8; }
 
-/* line 10, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 12, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+.accordion:hover {
+  border-top: 1px solid #33bb44;
+  border-bottom: 1px solid #33bb44; }
+
+/* line 17, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .inner {
   overflow: hidden;
   display: none; }
 
-/* line 14, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 21, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .inner.show {
   display: block; }
 
-/* line 17, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 24, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .toggle {
   display: block;
   transition: background 0.3s ease; }
 
-/* line 22, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 28, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .accordion-li {
   padding: 20px;
   text-align: left; }
 
 /*Botón*/
-/* line 30, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 36, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .port-btn-seemore {
   display: inline-block;
   font-weight: 700;
@@ -3028,16 +3145,18 @@ input:hover:-ms-input-placeholder {
   color: #0097e8;
   background-color: white;
   border: 0;
-  border-top: 1px solid #0097e8;
-  border-bottom: 1px solid #0097e8;
   font-size: 1.5rem;
   padding: 10px; }
 
-/* line 44, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 46, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+.port-btn-seemore:hover {
+  color: #33bb44; }
+
+/* line 50, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .port-btn-seemore:before {
   content: "Menú"; }
 
-/* line 48, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
+/* line 53, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .port-btn-seeless:before {
   content: "Cerrar"; }
 
