--- a/src/scss/inicio-style.scss
+++ b/src/scss/inicio-style.scss
@@ -1,4 +1,4 @@
-@import 'layout/inicio';
+@import 'variables/color-variables';
 @import 'vendor/normalize';
 @import 'vendor/animations';
 @import 'colors/color-background';
@@ -13,5 +13,5 @@
 @import 'layout/normalize';
 @import 'layout/terms-conditions';
 @import 'layout/forms';
-///@import 'layout/lightbox';
+@import 'layout/lightbox';
 @import 'layout/accordeon';
